--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,13 @@
-altgraph==0.10.2
-bdist-mpkg==0.5.0
 click==4.0
-Django==1.8
-httplib2==0.9.1
-lxml==3.4.4
-macholib==1.5.1
-modulegraph==0.10.4
-oauth2==1.5.211
-py2app==0.7.3
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
-pyOpenSSL==0.13.1
-pyparsing==2.0.1
-python-dateutil==1.5
-pytz==2013.7
-rauth==0.7.1
+dj-database-url==0.3.0
+dj-static==0.0.6
+Django==1.8.2
+django-toolbelt==0.0.1
+gunicorn==19.3.0
+psycopg2==2.6
 redis==2.10.3
-requests==2.6.0
+requests==2.7.0
 rq==0.5.2
-scipy==0.13.0b1
-simplejson==3.6.5
-six==1.4.1
-Twisted==13.2.0
-virtualenv==13.0.1
-xattr==0.6.4
+static3==0.6.1
+wheel==0.24.0
 xmltodict==0.9.2
-zope.interface==4.1.1
